# dc4mem0

./: README.md  pyproject.toml
src/datacloud/connectors/ingestion_api/: ingestion_client.py
src/datacloud/readers/: query_svc.py
src/main/: dcmem.py
